Implement the session code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">App_YourNewsOnTime</string>
+    <string name="prefs_file">com.example.app_yournewsontime.PREFERENCE_FILE_KEY</string>
 </resources>
